[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
src-layout = true

[project]
name = "ml_utils"
version = "0.1.0"
description = "ML utilities"
readme = "README.md"
authors = [
    {name = "Orion Chang", email = "ism.zjx@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "torch>=2.6.0+cu126",
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "torchinfo>=1.7.0",
    "tensorboard>=2.19.0",
    "torchvision>=0.21.0"
]


[project.urls]
Homepage = "https://github.com/OrionChang/ml_utils"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "coverage>=6.0.0",
]




[tool.setuptools.package-data]
"ml_utils" = ["*.txt", "*.csv"]